--- a/website/package.json
+++ b/website/package.json
@@ -13,20 +13,23 @@
     "@hashicorp/react-head": "1.1.1",
     "@hashicorp/react-mega-nav": "4.0.1-2",
     "@hashicorp/react-product-downloader": "4.0.2",
+    "@hashicorp/react-search": "^2.0.0",
     "@hashicorp/react-section-header": "2.0.0",
     "@hashicorp/react-subnav": "3.2.3",
     "@hashicorp/react-vertical-text-block-list": "2.0.1",
-    "algoliasearch": "4.3.0",
+    "algoliasearch": "^4.4.0",
     "babel-plugin-import-glob-array": "0.2.0",
     "dotenv": "8.2.0",
+    "glob": "^7.1.6",
     "gray-matter": "4.0.2",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "remark": "^12.0.1",
+    "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
     "dart-linkcheck": "2.0.15",
-    "glob": "7.1.6",
     "husky": "4.2.5",
     "prettier": "2.0.5"
   },
